source/overlay/outline/outlineDark.css
#lindy-info-topleft-content {
    /* --lindy-dark-theme-text-color and background color injected from common/theme.ts */

    color: var(--lindy-dark-theme-text-color) !important;
}
.lindy-tooltp {
    --text-color: var(--lindy-dark-theme-text-color) !important;
}

.heading-text.visited > .title,
.reading-time {
    color: #52525b !important;
}

svg.message-icon {
    color: #e5e7eb !important; /* text-gray-200 */
}

.close-message {
    color: #9ca3af !important; /* text-gray-400 */
}
.close-message:hover {
    color: white !important;
}

.spacer-line {
    border-color: #44403c !important; /* text-stone-700 */
}
.progress-circle > .placeholder {
    stroke: #44403c !important; /* text-stone-700 */
}

.library-message {
    color: var(--lindy-dark-theme-text-color) !important;
}

.zoom-icon {
    color: #d6d3d1; /* text-stone-300 */
    background-color: #44403c !important; /* bg-stone-700 */
}
.links-message {
    color: #d6d3d1 !important; /* text-stone-300 */
}
.star-full {
    color: hsl(51, 80%, 43%) !important;
}

